<5500 moves for 500 ints

--- a/test/Makefile
+++ b/test/Makefile
@@ -6,7 +6,7 @@
 #    By: eproust <contact@edouardproust.dev>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/11/19 15:20:43 by eproust           #+#    #+#              #
-#    Updated: 2024/11/28 15:08:35 by eproust          ###   ########.fr        #
+#    Updated: 2024/11/29 05:31:17 by eproust          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,7 +14,7 @@ NAME		= push_swap
 
 ARGS		= 4 2 3 1
 
-FLAGS   	= -I$(ROOT_DIR) -I$(LIB_DIR) -I.
+FLAGS		= -I$(ROOT_DIR) -I$(LIB_DIR) -I.
 
 C_TEST		= test.c
 
@@ -25,22 +25,34 @@ C_FILES		= $(filter-out $(wildcard ../*test*.c), $(wildcard ../*.c)) $(C_TEST)
 H_FILES		= $(wildcard $(ROOT_DIR)*.h)
 O_FILES		= $(C_FILES:.c=.o)
 
-TEST_TITLE	= "\n┌──────────────┐\n│ Test result: │\n└──────────────┘\n"
-
-all: test
+all: moves count check
 
 %.o: %.c Makefile $(ROOT_DIR)Makefile $(H_FILES)
 	cc $(FLAGS) -c $< -o $@
 
-test: $(NAME)
-	@echo $(TEST_TITLE)
+check: $(NAME)
+	@echo "             ┌────────────────┐"
+	@echo "─────────────┤ Checker output ├─────────────"
+	@echo "             └────────────────┘"
+	@ARG="$(ARGS)"; ./push_swap $$ARG | ./checker_linux $$ARG
+
+count: $(NAME)
+	@echo "              ┌─────────────┐"
+	@echo "──────────────┤ Moves count ├───────────────"
+	@echo "              └─────────────┘"
+	@ARG="$(ARGS)"; ./push_swap $$ARG | grep -a -E '^(pa|pb|ra|rb|rra|rrb|sa|sb|rr|rrr)$$' | wc -l
+
+moves: $(NAME)
+	@echo "              ┌────────────┐"
+	@echo "──────────────┤ Moves list ├────────────────"
+	@echo "              └────────────┘"
 	@./$(NAME) $(ARGS)
-	@rm -f $(NAME)
-	
-leaks: $(NAME)
-	@echo $(TEST_TITLE)
+
+valgrind: $(NAME)
+	@echo "             ┌───────────────┐"
+	@echo "─────────────┤ Valgrind test ├──────────────"
+	@echo "             └───────────────┘"
 	@valgrind ./$(NAME) $(ARGS)
-	@rm -f $(NAME)
 
 $(NAME): $(O_FILES) $(A_LIB)
 	cc $(FLAGS) -o $@ $(O_FILES) $(A_LIB)
